...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_booking_poster"
                    android:layout_width="0dp"
                    android:layout_height="341dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    app:imageId="@{movie.imageSource}"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_booking_poster">

                    <TextView
                        android:id="@+id/tv_booking_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@{movie.title}"
                        android:textColor="@color/black"
                        android:textSize="24sp"
...
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_booking_title" />

                    <TextView
                        android:id="@+id/tv_booking_screening_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="29dp"
                        android:text=""
                        android:textColor="@color/black"
...
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_booking_screening_info" />

                    <TextView
                        android:id="@+id/tv_booking_running_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@{@string/minute_text(movie.runningTime)}"
                        android:textColor="@color/black"
                        android:textSize="16sp"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_booking_running_info">

                        <Spinner

                            android:id="@+id/spinner_screening_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <Spinner
                            android:id="@+id/spinner_screening_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"

                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Button
                        android:id="@+id/btn_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp"
                        android:onClick="@{() -> headCountListener.onDecreaseHeadCount()}"
                        android:text="@string/btn_minus_text"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spinner_layout" />

                    <TextView
                        android:id="@+id/tv_people_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/btn_plus"
                        app:layout_constraintEnd_toStartOf="@id/btn_plus"
                        app:layout_constraintStart_toEndOf="@id/btn_minus"
                        app:layout_constraintTop_toTopOf="@id/btn_minus"
                        tools:text="0" />

                    <Button
...
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spinner_layout" />

                    <Button
                        android:onClick="@{() -> reservationListener.onReserveTicket()}"
                        android:id="@+id/btn_selection_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/booking_btn_select_complete"
                        android:textSize="20sp"
                        android:textStyle="bold"
...
