...
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{@string/all_running_time(movie.runningTime)}"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_movie_catalog_title"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_catalog_screening_period"
            tools:text="러닝타임: 152분" />

        <Button
            android:id="@+id/button_movie_catalog_reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
...
