<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_booking_seat"
    tools:context=".feature.bookingseat.view.BookingSeatActivity">

    <data>

        <variable
            name="bookingInfo"
            type="woowacourse.movie.feature.model.BookingInfoUiModel" />

        <variable
            name="onSeatSelectCompleteClick"
            type="kotlin.jvm.functions.Function0" />

        <variable
            name="presenter"
            type="woowacourse.movie.feature.bookingseat.contract.BookingSeatContract.Presenter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_100"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/tv_booking_seat_screen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34dp"
            android:background="@color/gray_300"
            android:paddingVertical="8dp"
            android:text="@string/booking_seat_screen"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tl_booking_seat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_booking_seat_screen" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_booking_seat_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{bookingInfo.movie.title}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_booking_seat_movie_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="레디 플레이어 원" />

            <TextView
                android:id="@+id/tv_booking_seat_movie_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/booking_seat_price(bookingInfo.getTotalPriceText())}"
                android:textColor="@color/gray_300"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_booking_seat_movie_title"
                tools:text="0원" />

            <TextView
                android:id="@+id/tv_booking_seat_select_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_movie_seat_complete_background"
                android:enabled="@{bookingInfo.isRequiredSeatsSelected}"
                android:onClick="@{() -> presenter.completeSeatSelection(bookingInfo)}"
                android:minWidth="88dp"
                android:padding="28dp"
                android:text="@string/booking_seat_select_complete"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/gray_200" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>