<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="ticket"
            type="woowacourse.movie.domain.model.movie.MovieTicket" />
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.bookingsummary.BookingSummaryActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@color/purple"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textview_notice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@{ticket.movieTitle}"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="해리 포터와 마법사의 돌" />

            <TextView
                android:id="@+id/textview_screeningdatetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="40dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:formattedDateTime="@{ticket.screeningDateTime}"
                tools:text="2024.3.1 17:00" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textview_headcount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="20sp"
                    app:formattedHeadCount="@{ticket.headCount}"
                    tools:text="일반 2명" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/delimiter"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textview_seats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    app:seats="@{ticket.seats}"
                    android:textSize="20sp"
                    tools:text="A1, A2, A3, B1, B2, B3, D2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/delimiter"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textview_theater_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@{ticket.theaterName}"
                    android:textSize="20sp"
                    tools:text="선릉 극장 선릉 극장 선릉 극장 선릉 극장 선릉 극장" />

            </LinearLayout>

            <TextView
                android:id="@+id/textview_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                app:formattedAmount="@{ticket.amount}"
                tools:text="25,000원 (현장 결제)" />

        </LinearLayout>

    </LinearLayout>

</layout>